fix(editor): resize和translate操作调整

--- a/packages/editor/src/designable/designable-react/src/widgets/AuxToolWidget/styles.less
+++ b/packages/editor/src/designable/designable-react/src/widgets/AuxToolWidget/styles.less
@@ -239,6 +239,7 @@
     top: 50%;
     transform: translate(calc(-50% - 1px), -50%);
     cursor: ew-resize;
+    border: 1px solid #f53d4d;
   }
 
   &.right-center {
@@ -253,6 +254,7 @@
     top: 0;
     transform: translate(-50%, calc(-50% - 1px));
     cursor: ns-resize;
+    border: 1px solid #f53d4d;
   }
 
   &.center-bottom {
@@ -267,6 +269,7 @@
     top: 0;
     transform: translate(calc(-50% + 1px), calc(-50% + 1px));
     cursor: nwse-resize;
+    border: 1px solid #f53d4d;
   }
 
   &.left-bottom {
@@ -274,6 +277,7 @@
     top: 100%;
     transform: translate(-50%, -50%);
     cursor: nesw-resize;
+    border: 1px solid #f53d4d;
   }
 
   &.right-bottom {
@@ -288,6 +292,7 @@
     top: 0;
     transform: translate(-50%, -50%);
     cursor: nesw-resize;
+    border: 1px solid #f53d4d;
   }
 }
 
